--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
   },
   "author": "Patrik Drean",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "@babel/runtime": "^7.8.4",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.15.3",
+    "mongoose": "^4.11.10",
+    "react-router-dom": "^4.2.2",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
@@ -27,14 +34,5 @@
     "supertest": "^3.0.0",
     "testdouble": "^3.2.6",
     "uuid": "^3.1.0"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.8.4",
-    "body-parser": "^1.17.2",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.15.3",
-    "mongoose": "^4.11.10",
-    "react-router-dom": "^4.2.2"
   }
 }
