--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Basic todo list web application to demonstrate testing",
   "main": "server.js",
   "scripts": {
-    "test": "mocha ./server/_config/test ./server/**/*.test.js --require @babel/register",
-    "test-integration": "mocha ./server/_config/test ./server/_config/test/database-setup.js ./server/**/*.i-test.js --require @babel/register",
-    "test-acceptance": "mocha ./server/_config/test ./server/**/*.a-test.js --require @babel/register",
     "start": "concurrently 'npm run server' 'npm run client'",
     "server": "babel-node server/start-server.js ",
-    "client": "babel-node client/start-client.js"
+    "client": "babel-node client/start-client.js",
+    "test": "mocha ./server/_config/test ./server/**/*.test.js --require @babel/register",
+    "test-integration": "mocha ./server/_config/test ./server/_config/test/database-setup.js ./server/**/*.i-test.js --require @babel/register",
+    "test-acceptance": "mocha ./server/_config/test ./server/**/*.a-test.js --require @babel/register"
   },
   "author": "Patrik Drean",
   "license": "ISC",
