--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "192x192",
+      "sizes": "48X48",
       "type": "image/png"
     }
   ],
