--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "favicon.ico",
       "sizes": "48X48",
-      "type": "image/png"
+      "type": "image/ico"
     }
   ],
   "start_url": "./index.html",
