--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@babel/register": "^7.8.3",
     "axios": "^0.17.1",
     "chai": "^4.1.2",
-    "concurrently": "^3.5.0",
     "mocha": "^3.5.3",
     "supertest": "^3.0.0",
     "testdouble": "^3.2.6",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^3.6.1"
   }
 }
